<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.jenkins-ci.plugins</groupId>
    <artifactId>plugin</artifactId>
    <version>2.26</version>
  </parent>

  <properties>
      <jenkins.version>2.26</jenkins.version>
    <!-- <jenkins-test-harness.version>${jenkins.version}</jenkins-test-harness.version> -->
    <findbugs.failOnError>false</findbugs.failOnError>
  </properties>

  <artifactId>klocwork</artifactId>
  <version>1.24.7-SNAPSHOT</version>
  <name>Jenkins Klocwork Plug-in</name>
  <url>http://wiki.jenkins-ci.org/display/JENKINS/Klocwork+Plugin</url>
  <packaging>hpi</packaging>

  <licenses>
    <license>
      <name>MIT license</name>
      <comments>All source code is under the MIT license.</comments>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>michaelbaron</id>
      <name>Michael Baron</name>
      <email>michael.baron@emenda.com</email>
    </developer>
  </developers>

  <distributionManagement>
    <repository>
      <id>maven.jenkins-ci.org</id>
      <name>jenkinsci-releases</name>
      <url>http://repo.jenkins-ci.org/releases</url>
    </repository>
    <snapshotRepository>
      <id>maven.jenkins-ci.org</id>
      <name>jenkinsci-snapshots</name>
      <url>http://repo.jenkins-ci.org/snapshots</url>
    </snapshotRepository>
  </distributionManagement>

  <scm>
    <connection>scm:git:ssh://github.com:jenkinsci/klocwork-plugin.git</connection>
    <developerConnection>scm:git:git@github.com:jenkinsci/klocwork-plugin.git</developerConnection>
    <url>https://github.com/jenkinsci/klocwork-plugin.git</url>
    <tag>HEAD</tag>
  </scm>

  <repositories>
    <repository>
      <id>repo.jenkins-ci.org</id>
      <url>http://repo.jenkins-ci.org/public/</url>
    </repository>
    <repository>
        <id>Emenda</id>
        <name>java-libs</name>
        <url>https://gitlab.com/emenda/java-libs/raw/master</url>
        <layout>default</layout>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>repo.jenkins-ci.org</id>
      <url>http://repo.jenkins-ci.org/public/</url>
    </pluginRepository>
  </pluginRepositories>

  <build>
      <plugins>
        <plugin>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>1.3</version>
        </plugin>
        <plugin>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>2.2-beta-5</version>
        </plugin>
        <plugin>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>2.8</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>2.5.1</version>
          <dependencies>
            <dependency>
              <groupId>org.apache.maven.scm</groupId>
              <artifactId>maven-scm-provider-gitexe</artifactId>
              <version>1.9.2</version>
            </dependency>
          </dependencies>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.6.1</version>
		  <!--Java version configuration, use Java 8-->
		  <configuration>
			<source>1.8</source>
			<target>1.8</target>
		  </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.18.1</version>
          <configuration>
            <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.jenkins-ci.tools</groupId>
          <artifactId>maven-hpi-plugin</artifactId>
          <extensions>true</extensions>
          <configuration>
            <compatibleSinceVersion>1.4.0</compatibleSinceVersion>
          </configuration>
        </plugin>
      </plugins>
  </build>

  <dependencies>
    <!-- Jenkins dependencies -->
    <dependency>
            <groupId>org.jenkins-ci.plugins</groupId>
            <artifactId>dashboard-view</artifactId>
            <version>2.0</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>eu.emenda</groupId>
            <artifactId>kwjlib</artifactId>
            <version>2.9</version>
        </dependency>
		<dependency>
 			<groupId>org.jenkins-ci.plugins</groupId>
 			<artifactId>junit</artifactId>
 			<version>1.5</version>
 		</dependency>
        <dependency>
 			<groupId>org.jenkins-ci.plugins</groupId>
 			<artifactId>matrix-project</artifactId>
 			<version>1.4</version>
 		</dependency>
		<dependency>
          <groupId>joda-time</groupId>
          <artifactId>joda-time</artifactId>
          <version>2.9.7</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.5</version>
        </dependency>

        <dependency>
            <groupId>org.jenkins-ci.plugins</groupId>
            <artifactId>job-dsl</artifactId>
            <version>1.58</version>
            <optional>true</optional>
        </dependency>

        <!-- Pipeline dependencies -->
        <dependency>
          <groupId>org.jenkins-ci.plugins.workflow</groupId>
          <artifactId>workflow-basic-steps</artifactId>
          <version>2.5</version>
        </dependency>
        <dependency>
          <groupId>org.jenkins-ci.plugins.workflow</groupId>
          <artifactId>workflow-job</artifactId>
          <version>2.0</version>
        </dependency>
  </dependencies>
</project>
